# CrowdRL

./: .gitignore  Makefile  README.md  pyproject.toml  train_mappo.py
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
configs/: exp_memory_Aplus_nostuck_seed43.yaml  exp_memory_Aplus_seed43.yaml  exp_memory_Aplus_wide_seed43.yaml  exp_memory_Aplusplus_seed43.yaml  exp_memory_Aplusplus_stuck_pw15_seed43.yaml  exp_memory_optA_seed43.yaml  full_training.yaml  smoke_baseline.yaml  smoke_memory_Aplus.yaml  smoke_memory_Aplusplus.yaml  smoke_memory_optA.yaml
docs/: 2026-04-11_stuck_agent_tuning_summary.md  agent_pipeline.md  environment_mechanics.md
examples/: 01_geometry_and_navmesh.ipynb  02_sensing_and_observations.ipynb  03_mini_simulation.ipynb  04_gymnasium_env.ipynb  05_mappo_training.ipynb  06_full_training.ipynb  07_complex_geometry.ipynb  08_lane_formation_test.ipynb
plan/: CrowdRL_Project_Plan_v5.docx  CrowdRL_Project_Plan_v5.md  CrowdRL_Project_Plan_v6.md  MAPPO_Literature_Review.md  agent_memory_research.md  ddp_single_node.md  gpu_navmesh_waypoints.md  jax_environment_migration.md  neighbor_memory_extension.md  pytorch_env_migration.md  speedup_and_parallelisation.md  validation_benchmark_plan.md
scripts/: analyze_run.py  diagnose_stuck_agents.py  experiment_plan.md  fix_cuda_libs.py  notes_template.md  run_experiment.sh
tests/: test_train_mappo.py
