[project]
name = "crowdrl"
version = "0.1.0"
description = "MARL-learned pedestrian navigation policies for JuPedSim"
requires-python = ">=3.12"
dependencies = [
    "crowdrl-core",
    "crowdrl-env",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pre-commit",
    "ruff",
]

[tool.uv.workspace]
members = [
    "packages/crowdrl-core",
    "packages/crowdrl-env",
    "packages/crowdrl-train",
    "packages/crowdrl-torch",
    "packages/crowdrl-jupedsim",
]

[tool.uv.sources]
crowdrl-core = { workspace = true }
crowdrl-env = { workspace = true }
crowdrl-train = { workspace = true }
crowdrl-torch = { workspace = true }
crowdrl-jupedsim = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py312"
extend-exclude = ["examples/"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
