[project]
name = "crowdrl"
version = "0.1.0"
description = "MARL-learned pedestrian navigation policies for JuPedSim"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crowdrl-core",
    "crowdrl-env",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pre-commit",
    "ruff",
]

[tool.uv.workspace]
members = [
    "packages/crowdrl-core",
    "packages/crowdrl-env",
    "packages/crowdrl-train",
    "packages/crowdrl-torch",
    "packages/crowdrl-jupedsim",
]

[tool.uv.sources]
crowdrl-core = { workspace = true }
crowdrl-env = { workspace = true }
crowdrl-train = { workspace = true }
crowdrl-torch = { workspace = true }
crowdrl-jupedsim = { workspace = true }
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py312"
extend-exclude = ["examples/"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib-inline>=0.2.1",
    "onnxscript>=0.6.2",
    "torch==2.6.0",
    "triton>=3.1.0,<3.2.0; sys_platform == 'linux'",
    "triton-windows>=3.2.0,<3.3.0; sys_platform == 'win32'",
    # CUDA runtime libs — PyTorch cu126 wheel needs these but the index
    # strips them from metadata, so we list them explicitly.
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cudnn-cu12; sys_platform == 'linux'",
    "nvidia-cufft-cu12; sys_platform == 'linux'",
    "nvidia-curand-cu12; sys_platform == 'linux'",
    "nvidia-cusolver-cu12; sys_platform == 'linux'",
    "nvidia-cusparse-cu12; sys_platform == 'linux'",
    "nvidia-cusparselt-cu12; sys_platform == 'linux'",
    "nvidia-nccl-cu12; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12; sys_platform == 'linux'",
    "nvidia-nvtx-cu12; sys_platform == 'linux'",
]
